<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ForgetMeNot</string>
    <string name="description_help_button">Help</string>
    <string name="description_back_button">Navigate back</string>
    <string name="description_back_button2">Back</string>
    <string name="description_close">close</string>
    <string name="description_attention_icon">attention icon</string>
    <string name="title_example_in_settings_bottom_sheet">Example</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disabled">Disabled</string>
    <string name="label_name">Name</string>
    <string name="quit_without_saving_message">Your unsaved changes will be lost. Save changes
        before quitting?</string>
    <string name="button_save">Save</string>
    <string name="button_quit_without_saving">Quit without saving</string>
    <string name="no_cards">No cards</string>
    <string name="button_go_back">Go back</string>
    <string name="drawer_item_decks">Decks</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_backup">Backup</string>
    <string name="drawer_item_support_app">Support app</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_about">About</string>
    <string name="description_drawer_button">Open navigation menu</string>
    <string name="hint_search_edittext">Search</string>
    <string name="title_deck_selection_toolbar_choose_decks_to_play">Choose decks to play</string>
    <string name="title_deck_selection_toolbar_choose_decks_for_exercise">Choose decks for exercise</string>
    <plurals name="title_selection_toolbar_number_of_selected_decks">
        <item quantity="one">%d deck</item>
        <item quantity="other">%d decks</item>
    </plurals>
    <string name="tab_decks">Decks</string>
    <string name="tab_cards">Cards</string>
    <string name="no_matching_decks">No matching decks</string>
    <string name="no_matching_cards">No matching cards</string>
    <string name="no_decks">No decks</string>
    <string name="deck_list_title_all_decks">All decks</string>
    <string name="deck_list_title_decks_available_for_exercise">Decks available for exercise</string>
    <string name="deck_list_title_specific_deck_list_available_for_exercise">\'%1$s\' available for exercise</string>
    <string name="text_add_cards_button">Add cards</string>
    <string name="title_add_cards_popup">Add cards</string>
    <string name="text_import_file_button">Import file</string>
    <string name="text_browse_catalog_button">Browse catalog</string>
    <string name="text_create_new_deck_button">Create new deck</string>
    <string name="toast_no_file_manager_to_load">You don\'t have any file manager to load a file</string>
    <string name="toast_no_file_manager_to_create">You don\'t have any file manager to create a file</string>
    <string name="error_loading_file">Failed to read files:\n\n%1$s</string>
    <string name="snackbar_deck_has_been_created">Deck \'%s\' has been created</string>
    <string name="text_filter_button">Filters</string>
    <string name="title_deck_filters_popup">Filters</string>
    <string name="deck_filter_only_decks_available_for_exercise">Only decks available for exercise</string>
    <string name="section_title_in_filters_popup_deck_lists">Deck lists</string>
    <string name="create_new_deck_list">Create new list</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_time_created">By time created</string>
    <string name="sort_by_time_last_tested">By time last tested</string>
    <string name="sort_by_frequency_of_use">By frequency of use</string>
    <string name="sort_by_task">By task</string>
    <string name="title_deck_sorting_popup">Sort by</string>
    <string name="description_change_sorting_direction">Change sorting direction</string>
    <string name="deck_sorting_name">Name</string>
    <string name="deck_sorting_time_created">Time created</string>
    <string name="deck_option_start_exercise">Start exercise</string>
    <string name="deck_option_autoplay">Autoplay</string>
    <string name="deck_option_rename">Rename</string>
    <string name="deck_option_edit_cards">Edit cards</string>
    <string name="deck_option_setup">Setup</string>
    <string name="deck_option_pin">Pin</string>
    <string name="deck_option_export">Export</string>
    <string name="deck_option_merge_into">Merge into</string>
    <string name="deck_option_remove">Remove</string>
    <string name="cta_rate_the_app_on_google_play">Rate the app on Google Play</string>
    <string name="cta_rate_the_app_on_google_play_description">App rating affect people\'s decision
        to download app. Positive rating can help us reach more users. With higher downloads, we
        will be able to receive feedback from a number of different perspectives which will help us
        in making ForgetMeNot better than ever.</string>
    <string name="text_rate_us_button">Rate us</string>
    <string name="cta_give_us_feedback">Give us feedback</string>
    <string name="cta_give_us_feedback_description">Tell us what\'s working, and what\'s not. We
        want to provide you with the best experience, so your feedback is very valuable. Let us
        know how we can do better.</string>
    <string name="text_write_review_on_google_play_button">Write review on Google Play</string>
    <string name="text_submit_new_issue_on_github_button">Submit new issue on Github</string>
    <string name="text_send_email_to_author_button">Send email to author</string>
    <string name="cta_help_us_with_translation">Help us with translation</string>
    <string name="cta_help_us_with_translation_description">Translation is necessary for users who
        speak others languages to enjoy the app. Also, localization enables the app to be more
        accessible and useful to a wider audience.</string>
    <string name="text_help_translate_button">Help translate</string>
    <string name="cta_share_with_friends">Share with friends</string>
    <string name="cta_share_with_friends_description">Your friends might need the app. Share your
        experience with them.</string>
    <string name="text_share_with_friends_button">Share with friends</string>
    <string name="cta_join_us_on_social_media">Join us on Social Media</string>
    <string name="cta_join_us_on_social_media_description">Get the latest news, share interesting
        articles, ask questions. Connect, follow and have conversation with us.</string>
    <string name="description_facebook_button" translatable="false">Facebook</string>
    <string name="description_instagram_button" translatable="false">Instagram</string>
    <string name="description_twitter_button" translatable="false">Twitter</string>
    <string name="description_youtube_button" translatable="false">Youtube</string>
    <string name="article_import_of_file_paragraph_1">ForgetMeNot can import text files in two formats:</string>
    <string name="article_import_of_file_qa_format_section_title">1. \'Q:A:\' format</string>
    <string name="description_window_frame_icons">Window frame icons</string>
    <string name="example_of_text_file_qa_format">Q:
        \nWhat city was the first capital of the United States?
        \nA:
        \nNew York City

        \n\n\n\nQ:
        \nWho first discovered America?
        \nA:
        \nLeif Erikson

        \n\n\n\nQ:
        \nWho invented the first car?
        \nA:
        \nKarl Benz

        \n\n\n\nQ:
        \nWhen did the Revolutionary War end?
        \nA:
        \nSeptember 3, 1783</string>
    <string name="example_qa_format_file_name">American history.txt</string>
    <string name="article_import_of_file_qa_format_description">This is a proprietary format of
        ForgetMeNot. It was invented for manually creating cards in a text file.
        This format is intuitive and readable. It is recommended to use this format if you compose
        cards on a computer.</string>
    <string name="article_import_of_file_dsv_format_section_title">2. Delimiter-separated values</string>
    <string name="example_of_text_file_dsv_format">\"nature\";\"природа\"
        \n\"beach\";\"берег, пляж\"
        \n\"coast\";\"морское побережье\"
        \n\"desert\";\"пустыня\"
        \n\"glacier\";\"ледник\"
        \n\"forest\";\"лес\"
        \n\"field\";\"поле, луг\"
        \n\"canyon\";\"каньон\"
        \n\"island\";\"остров\"
        \n\"jungle\";\"джунгли, дебри\"
        \n\"lake\";\"озеро\"
        \n\"mountain\";\"гора\"
        \n\"hill\";\"холм, возвышенность\"
        \n\"plain\";\"равнина\"
        \n\"hollow\";\"низина, впадина\"
        \n\"pond\";\"пруд\"
        \n\"rock\";\"скала, камень\"
        \n\"ocean\";\"океан\"
        \n\"sea\";\"море\"
        \n\"river\";\"река\"</string>
    <string name="example_dsv_format_file_name">Nature.csv</string>
    <string name="article_import_of_file_dsv_format_description">This is the generic name for
        <a href="https://en.wikipedia.org/wiki/Comma-separated_values">CSV</a> or
        <a href="https://en.wikipedia.org/wiki/Tab-separated_values">TSV</a>
        files. This format is used to represent tabular data. Many programs such as Microsoft
        Excel, Google Sheets allow you to export data in this format. ForgetMeNot interpret each
        record (row) as a separate card, the first column as a question, the second column as an
        answer. You can also manually create such files. For example, create a file with a .tsv
        extension where the tab character will separate questions and answers.

        \n\nSince this format is not strict, you are invited to choose a clarifying format among
        the predefined ones or create your own.</string>
    <string name="article_testing_methods_paragraph_1">Testing methods define how the answer will
        be tested. There are 4 options:</string>
    <string name="article_testing_methods_off_section_title">1. Without testing</string>
    <string name="article_testing_methods_off_section_description">It may be used for decks with
        which you do not plan to work for a long time. For example, it might be a deck that contains
        sentences in the native and target language and you want to translate once without further
        repetition.</string>
    <string name="article_testing_methods_manual_section_title">2. Self testing</string>
    <string name="article_testing_methods_manual_section_description">Basic testing method. You
        decide whether you remember the answer or not. The main advantage is the efficiency of
        memorization.</string>
    <string name="article_testing_methods_quiz_section_title">3. Testing with variants</string>
    <string name="article_testing_methods_quiz_section_description">In this mode, you need to choose
        the correct variant from the four offered. Variants are taken from the deck to which the
        card belongs. Therefore, if you are going to use this testing method, it is important to
        create a deck where variants are appropriate. For example, it could be a
        \'word-translation\' deck with the same parts of speech. This is a more playful form of
        testing, so it\'s great for kids. The disadvantage is the average memory efficiency, as
        variants are an significant clue.</string>
    <string name="article_testing_methods_entry_section_title">4. Spell check</string>
    <string name="article_testing_methods_entry_section_description">This method will be useful if
        you want to test the spelling of words. It can be used as a dictation. To do this, create a
        deck where the question and answer will be the same, turn off the question display, select
        the language and enable the auto-pronunciation of the question in the deck settings.</string>
</resources>