<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/paragraph1"
            style="@style/ArticleParagraph"
            android:text="@string/article_testing_methods_paragraph_1" />

    <TextView
            android:id="@+id/off_section_title"
            style="@style/ArticleParagraph"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/article_testing_methods_off_section_title"
            android:textColor="@color/textSecondary" />

    <include
            android:id="@+id/offTestExerciseCardExample"
            layout="@layout/item_exercise_card_off_test"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    <TextView
            android:id="@+id/off_section_description"
            style="@style/ArticleParagraph"
            android:text="@string/article_testing_methods_off_section_description" />

    <TextView
            android:id="@+id/manual_section_title"
            style="@style/ArticleParagraph"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/article_testing_methods_manual_section_title"
            android:textColor="@color/textSecondary" />

    <include
            android:id="@+id/manualTestExerciseCardExample"
            layout="@layout/item_exercise_card_manual_test"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    <TextView
            android:id="@+id/manual_section_description"
            style="@style/ArticleParagraph"
            android:text="@string/article_testing_methods_manual_section_description" />

    <TextView
            android:id="@+id/quiz_section_title"
            style="@style/ArticleParagraph"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/article_testing_methods_quiz_section_title"
            android:textColor="@color/textSecondary" />

    <include
            android:id="@+id/quizTestExerciseCardExample"
            layout="@layout/item_exercise_card_quiz_test"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    <TextView
            android:id="@+id/quiz_section_description"
            style="@style/ArticleParagraph"
            android:text="@string/article_testing_methods_quiz_section_description" />

    <TextView
            android:id="@+id/entry_section_title"
            style="@style/ArticleParagraph"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/article_testing_methods_entry_section_title"
            android:textColor="@color/textSecondary" />

    <include
            android:id="@+id/entryTestExerciseCardExample"
            layout="@layout/item_exercise_card_entry_test"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

    <TextView
            android:id="@+id/entry_section_description"
            style="@style/ArticleParagraph"
            android:text="@string/article_testing_methods_entry_section_description" />

</LinearLayout>